--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,10 +11,13 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "boxicons": "^2.1.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.0",
     "sweetalert2": "^11.4.18",
     "swiper": "^8.2.2",
     "web-vitals": "^2.1.4"
