--- a/Backend/package.json
+++ b/Backend/package.json
@@ -31,6 +31,7 @@
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/typeorm": "^8.0.3",
     "bcrypt": "^5.0.1",
+    "crypto-js": "^4.1.1",
     "dotenv": "^16.0.0",
     "multer": "^1.4.5-lts.1",
     "passport": "^0.5.2",
