--- a/Backend/package.json
+++ b/Backend/package.json
@@ -33,6 +33,7 @@
     "bcrypt": "^5.0.1",
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.0",
+    "flowcl-node-api-client": "^1.1.5",
     "multer": "^1.4.5-lts.1",
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
